# ai-chess-skills

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  stockfish-smoke.yml
docs/superpowers/plans/: 2026-06-14-ai-chess-skills.md  2026-06-15-chess-review-orchestration.md
docs/superpowers/specs/: 2026-06-14-ai-chess-skills-design.md  2026-06-15-chess-review-orchestration-design.md
resources/: chess_com_api.json
scripts/: validate_skill.py
skills/analyze-chess-games/: SKILL.md
skills/analyze-chess-games/agents/: openai.yaml
skills/fetch-chess-games/: SKILL.md
skills/fetch-chess-games/agents/: openai.yaml
skills/review-chess-game/: SKILL.md
skills/review-chess-game/agents/: openai.yaml
skills/setup-chess-engine/: SKILL.md
skills/setup-chess-engine/agents/: openai.yaml
skills/visualize-chess-analysis/: SKILL.md
skills/visualize-chess-analysis/agents/: openai.yaml
src/ai_chess/: analysis.py  chesscom.py  cli.py  errors.py  io.py  lichess.py  models.py  pgn.py  reports.py  stockfish.py
src/ai_chess/assets/: report.html
tests/fixtures/: archive.pgn  fake_uci.py  malformed.pgn  single.pgn  stockfish_release.json
tests/integration/: test_archive_resume.py  test_chesscom_fetch.py  test_cli_workflows.py  test_game_analysis.py  test_report_generation.py  test_stockfish_probe.py
tests/unit/: test_aggregates.py  test_analysis.py  test_chesscom.py  test_cli.py  test_io.py  test_lichess.py  test_models.py  test_pgn.py  test_reports.py  test_review_selection.py  test_stockfish.py
